# gitalyze

./: .clang-format  .gitignore  CMakeLists.txt  README.md  analysis.c  analysis.h  check_memleak.sh  commit_list.c  commit_list.h  compile_commands.json  main.c  object_tree.c  object_tree.h  result_writer.c  result_writer.h
analyses/: CMakeLists.txt  average.c  frequency.c
object_tree/: CMakeLists.txt  object_tree.c  object_tree.h
result_writers/: CMakeLists.txt  json.c  text.c
